
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1minai_webapi"
version = "1.0.3"
description = "Async Python wrapper for the 1min.ai web app"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "1min.ai", "llm", "ai", "async", "openai", "claude", "gemini",
    "image-generation", "text-to-speech", "speech-to-text", "video-generation",
    "reverse-engineered", "wrapper", "client", "unofficial"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/cyber-wojtek/1MinAI-API"
Issues = "https://github.com/cyber-wojtek/1MinAI-API/issues"

[tool.hatch.build.targets.wheel]
packages = ["oneminai_webapi"]

[tool.hatch.build.targets.sdist]
include = [
    "oneminai_webapi/",
    "examples.py",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
